# Prometheus_VDM

./: .env  .env.local  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  COSMOLOGY_ROUTER_CHECKLIST.md  CRUX_Todo_Kanban.md  FUM_LEGACY_PHYSICS_COMPONENT_MAPPING.md  LICENSE  MANIFEST.in  Makefile  PLANNED.md  PROVENANCE_manifest.json  README.md  RELEASE_NOTES_Provenance-Pack_v0.1.md  RELEASE_NOTES_v1.0.0.md  TODO  TODO_CHECKLIST.md  UP_NEXT.md  VDM_Self_Organization_Regression_Audit.md  VDM_Standards_Technical_Summary.md.md  axiomatic_theory_development.md  conftest.py  fum_live.py  fum_live_dashboard.py  plot_fum_dashboard.py  plot_fum_dashboard_v2.py  pyproject.toml  requirements-rocm.txt  requirements.txt  setup.py  test_axiomatic_theory.py
CRITICAL_VDM_Docs/: Critical Technical Briefing_ Void Walker System Context for Physicist Agent.md  FUM Core Implementation Guide_ Complete Technical Analysis.md  fum-vdm-generated-summary-20250905.md  say_texts.txt  say_texts_all.md
Derivation/: .gitignore  2025-10-28_STATUS_REPORT.md  AGENCY_FIELD.md  ALGORITHMS.md  ANALYSIS_INDEX.md  AXIOMS.md  BC_IC_GEOMETRY.md  CANON_MAP.md  CANON_PROGRESS.md  CHRONICLES.md  CONSTANTS.md  CORRECTIONS.md  DATA_PRODUCTS.md  DIMENSIONLESS_CONSTANTS.md  EQUATIONS.md  EXECUTIVE_SUMMARY_NEXT_STEPS.md  FUVDM_Overview.md  IMPLEMENTATION_GAPS_ANALYSIS.md  METRICS.md  NAMING_CONVENTIONS.md  NEXT_STEPS_RECOMMENDATIONS.md  OPEN_QUESTIONS.md  OVERVIEW.md  PROPOSAL_PRIORITY_MATRIX.md  README.md  ROADMAP.md  SCHEMAS.md  SYMBOLS.md  T8_A8_PROPOSAL_Lietz_Infinity_Conjecture_v1.md  TIER_STANDARDS.md  UNITS_NORMALIZATION.md  UToE_REQUIREMENTS.md  VALIDATION_METRICS.md  VDM-Progress-Findings.md  VDM_OVERVIEW.md  VDM_OVERVIEW.tex  VDM_PROGRESSION_STANDARDS.md  __init__.py  axiomatic_theory_development.md
Docs/: .gitignore  Blueprint_Update_Template.md  CLAUDE.md  FUM_Blueprint.md  FUM_Blueprint_DO_NOT_DELETE.md  LEGACY-FUM_Blueprint.md  Notable_Findings.txt  Roo-Tools.md  codeviz-diagram-2025-08-17T01-11-36.drawio  codeviz-diagram-2025-08-26T23-02-46.drawio  codeviz.md  optimal_architecture.md
FUM_Demo_original/: AI-Report-technical-2025-08-16 (1).md  fum_demo_v1_main.py  fum_sie.py  fum_substrate.py  fum_utd.py  fum_ute.py  void_nexus.py
HISTORICAL-ARCHIVE/: Discovery_Journey_Documentation.ipynb  Personal_Letter_Sacred_Discovery.md  consciousness_physics_unity_breakthrough.md
IN_PROGRESS/: FUM_LEGACY_PHYSICS_COMPONENT_MAPPING.md  FUM_PHYSICS_COMPONENT_MAPPING.md
MY_LEARNING/: curriculum.md
PUBLIC_PLANS/: memory_steering_preprint.md
VDM_Nexus/: .clang-format  .env.example  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NEXUS_ARCHITECTURE.md  README.md  TODO_CHECKLIST.md  vdm_nexus_mock.html
VDM_Nexus/application/: CMakeLists.txt  README.md
VDM_Nexus/application/ports/: ports.hpp
VDM_Nexus/config/: nexus.config.json
VDM_Nexus/domain/: CMakeLists.txt  README.md  models.hpp
VDM_Nexus/infrastructure/: CMakeLists.txt  README.md
VDM_Nexus/plugins/: CMakeLists.txt  README.md
VDM_Nexus/presentation/: CMakeLists.txt  DashboardController.cpp  DashboardController.h  README.md  presentation.qrc
VDM_Nexus/presentation/qml/: DashboardMetrics.qml  KpiPanel.qml  Main.qml
VDM_Nexus/reports/: license_audit.json  license_audit.v2.json  license_audit.v3.json  license_audit.v4.json  nexus-roadmap-index.v1.json
VDM_Nexus/resources/: CMakeLists.txt  README.md  nexus_canon_config.v1.json
VDM_Nexus/schemas/: README.md
VDM_Nexus/scripts/: CMakeLists.txt  README.md  approval_cli.py  canon_paths.py  canon_sync.py  nexus-lint.yml.template  nexus_canon_scan.py  nexus_canon_sync.py  nexus_ci_lint.py  nexus_index_validate.py  nexus_license_check.py  nexus_resolver_print.py  nexus_roadmap_index.py  nexus_static_policy_check.py  nexus_validate_gate.py  precommit_derivation_guard.py
VDM_Nexus/scripts/tests/: test_canon_paths.py  test_precommit_derivation_guard.py
VDM_Nexus/src/: main.cpp
VDM_Nexus/tests/: CMakeLists.txt  README.md
VDM_Nexus/vdm_nexus/: CMakeLists.txt
VDM_Nexus/vdm_nexus/src/: ViewportWindow.cpp  ViewportWindow.h  main.cpp
VDM_Nexus/vdm_nexus/src/domain/: Experiment.h
agent-onboarding/: FUM_Blueprint.md  Intro_&_QA-2025-08-24.md  VDM_Overview_20250826.md  axiomatic_theory_development.md
audits/: 2025-09-28_VDM_Technical_Debt_Ledger.md  2025-10-03_Agency-Terms-Glossary.md  2025-10-03_VDM-Agency-Session-Summary.md  2025-10-08_FUM_LEGACY_PHYSICS_COMPONENT_MAPPING.md  2025-10-08_FUM_PHYSICS_COMPONENT_MAPPING.md  2025-10-09_IMPLEMENTATION_GAPS_ANALYSIS.md  IMPLEMENTATION_GAPS_ANALYSIS.md  VDM_Technical_Debt_Ledger.md  VDM_Wiring_Audit.md
computational_proofs/: FUM_BC_Proof.py  FUM_DM_Proof.py  FUM_Light_Speed_Proof.py  FUM_QM_Proof.py  FUM_SM_Proof.py  void_functions.py
derivation/: .gitignore  AGENCY_FIELD.md  ALGORITHMS.md  BC_IC_GEOMETRY.md  BENCHMARKS_FLUIDS.md  CANON_MAP.md  CONSTANTS.md  CORRECTIONS.md  DATA_PRODUCTS.md  DIMENSIONLESS_CONSTANTS.md  EQUATIONS.md  FUVDM_Overview.md  FUVDM_Overview_PUBLIC.md  IMPLEMENTATION_GAPS_ANALYSIS.md  LOG_20250821.md  OPEN_QUESTIONS.md  PAPER_RULES.md  README.md  README_PUBLIC.md  ROADMAP.md  SCHEMAS.md  SYMBOLS.md  UNITS_NORMALIZATION.md  UToE_Requirements.md  VALIDATION_METRICS.md  axiomatic_theory_development.md  dense-scan-free-reaction-diffusion-runtime.txt  dimensionless-constants.md  discrete_to_continuum.md  effective_field_theory_approach.md  fluids_limit.md  memory_steering.md  rd_dispersion_validation.md  rd_front_speed_validation.md  rd_validation_plan.md  symmetry_analysis.md
derivations/: UNITS_NORMALIZATION.md
docs/: BACKGROUND-CONTEXT.md  MathJax-Offiial-Docs.md  ROCm_PyTorch_INSTALL.md  VDM_Background_Context.md  VDM_Standards_Technical_Summary.md.md  canon.md  code.md
enhancements/: learning.md
fum_legacy/: fum_demo_v1_main.py  fum_substrate.py  fum_ute.py  void_nexus.py
fum_rt/: README.md  __init__.py  nexus.py  run_nexus.py
maintenance-prompts/: algorithms_maintenance.md  bc_ic_geometry_maintenance.md  constants_maintenance.md  data_products_maintenance.md  equations_maintenance.md  (+7 more)
(+1765 files in other folders)
